// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountSettings component should match the snapshot with a full profile 1`] = `
<div>
  <div
    class="account-settings"
  >
    <div
      class="logout-button"
      role="button"
      tabindex="0"
    >
      <span>
        Logout
      </span>
    </div>
    <section
      class="personal-info"
    >
      <svg
        class="avatar-placeholder"
      >
        <use
          xlink:href="/svglist.svg#avatar_placeholder"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
      <h3
        class="name"
      >
        J
      </h3>
      <span
        class="name"
      >
        Jesse
      </span>
    </section>
    <div
      class="email-section"
    >
      <span
        class="title"
      >
        e-mail
      </span>
      <span
        class="wrapper"
      >
        <svg
          class="icon"
          height="26px"
          width="26px"
        >
          <use
            xlink:href="/svglist.svg#e-mail"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <input
          placeholder="emailaddress@mail.com"
          value="jesse@dbs.org"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`AccountSettings component should match the snapshot with the popup open 1`] = `
<div>
  <div
    class="account-settings"
  >
    <div
      class="logout-button"
      role="button"
      tabindex="0"
    >
      <span>
        Logout
      </span>
    </div>
    <section
      class="personal-info"
    >
      <svg
        class="avatar-placeholder"
      >
        <use
          xlink:href="/svglist.svg#avatar_placeholder"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
      <h3
        class="name"
      >
        J
      </h3>
      <span
        class="name"
      >
        Jesse
      </span>
    </section>
    <div
      class="email-section"
    >
      <span
        class="title"
      >
        e-mail
      </span>
      <span
        class="wrapper"
      >
        <svg
          class="icon"
          height="26px"
          width="26px"
        >
          <use
            xlink:href="/svglist.svg#e-mail"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <input
          placeholder="emailaddress@mail.com"
          value="jesse@dbs.org"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`AccountSettings component should match the snapshot without a full profile 1`] = `
<div>
  <div
    class="account-settings"
  >
    <div
      class="logout-button"
      role="button"
      tabindex="0"
    >
      <span>
        Logout
      </span>
    </div>
    <section
      class="personal-info"
    >
      <svg
        class="avatar-placeholder"
      >
        <use
          xlink:href="/svglist.svg#avatar_placeholder"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </section>
    <div
      class="email-section"
    >
      <span
        class="title"
      >
        e-mail
      </span>
      <span
        class="wrapper"
      >
        <svg
          class="icon"
          height="26px"
          width="26px"
        >
          <use
            xlink:href="/svglist.svg#e-mail"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <input
          placeholder="emailaddress@mail.com"
          value=""
        />
      </span>
    </div>
  </div>
</div>
`;
